--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,3 +1,9 @@
 nav {
     background-color:#ffd54f ;
+    font-family: 'Unna', serif;
+    color: orangered
+}
+.color {
+    font-family: 'Unna', serif;
+    color: orangered;
 }
