--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,9 +1,9 @@
 nav {
     background-color:#ffd54f ;
     font-family: 'Unna', serif;
-    color: orangered
+    color: #4fc3f7;
 }
 .color {
     font-family: 'Unna', serif;
-    color: orangered;
+    color: #039be5;
 }
