Added information to readme

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,7 +1,7 @@
 nav {
     background-color:#ffd54f ;
     font-family: 'Unna', serif;
-    color: #4fc3f7;
+    color:#039be5;
 }
 .color {
     font-family: 'Unna', serif;
