--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,18 @@
 body {
-    background-image: url("https://images.pexels.com/photos/1113272/pexels-photo-1113272.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-li {
-    display: inline;
-    padding: 5px;
+  z-index: -2;
+  background-image: url("https://images.pexels.com/photos/1113272/pexels-photo-1113272.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+
+li {
+  display: inline;
+  padding: 5px;
+}
+
 .App {
   min-height: 100vh;
-  
+  display: flex;
+  flex-direction: column;
 }
