--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -7,3 +7,7 @@ nav {
     font-family: 'Unna', serif;
     color: #039be5;
 }
+.mgheader {
+    font-size: 30px;
+    font-family: 'Pacifico', cursive;
+}
