added section for galary, map function not working

--- a/client/src/components/VideoBg/VideoBg.css
+++ b/client/src/components/VideoBg/VideoBg.css
@@ -24,7 +24,7 @@
         display: none;
     }
 	body {
-        background: url(../../assets/images/staticBg.png);
+        background: url(/assets/images/staticBg.png);
         background-size: cover;
         background-attachment: fixed;
     }
