added new delete style to profile image

--- a/client/src/components/ProfileImage/ProfileImage.css
+++ b/client/src/components/ProfileImage/ProfileImage.css
@@ -3,7 +3,7 @@
     width: 200px;
     min-width: 200px;
     max-height: 300px;
-    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+    box-shadow: 0 3px 6px rgb(46, 46, 46), 0 3px 6px rgb(68, 67, 67);
     text-align: left;
 }
 
@@ -19,6 +19,13 @@
     cursor: pointer;
 }
 
-.card > .remove:hover {
-    color: #d50000;
+.deleteBtn:hover {
+    background-color: #d50000;
+}
+
+.deleteBtn {
+    border: none;
+    border-radius: .5rem;
+    background-color: rgba(8, 8, 8, 0.692);
+    color: white;
 }
