Changed font withing photographer card

--- a/client/src/components/GraphersCard/GraphersCard.css
+++ b/client/src/components/GraphersCard/GraphersCard.css
@@ -3,4 +3,5 @@
     padding: 20px;
     border-radius: .5rem;
     box-shadow: 0 3px 6px rgb(46, 46, 46), 0 3px 6px rgb(68, 67, 67);
+    font-family: 'Cardo', serif;
 }
