--- a/client/src/components/GalaryDisplay/GalaryDisplay.css
+++ b/client/src/components/GalaryDisplay/GalaryDisplay.css
@@ -2,7 +2,8 @@
     position: relative;
     max-width: 600px;
     max-height: 500px;
-    text-align: left;
+    text-align: center;
+    margin: 15px 0px 20px 0px;
 }
 
 .card3 > .gallery {
