--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,3 +8,11 @@ li {
   display: flex;
   flex-direction: column;
 }
+
+.login2, .signup, .customer {
+  background-image: url("https://images.pexels.com/photos/1113272/pexels-photo-1113272.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
