--- a/client/src/components/VideoBg/VideoBg.css
+++ b/client/src/components/VideoBg/VideoBg.css
@@ -1,6 +1,14 @@
-#background-video {
-    position: fixed;
+.content {
+    position: relative;
     z-index: -1;
+}
+
+.content video {
+    height: 100vh;
+    width: 100%;
+    background-position: absolute;
+    z-index: 10;
+    object-fit: cover;
 }
 
 @media (min-aspect-ration: 16/9) {
@@ -17,15 +25,4 @@
         height: 100%;
     }
 	
-}
-
-@media (max-width: 767px) {
-    #background-video {
-        display: none;
-    }
-	body {
-        background: url(/assets/images/staticBg.png);
-        background-size: cover;
-        background-attachment: fixed;
-    }
 }
