--- a/client/src/components/AboutSection/AboutSection.css
+++ b/client/src/components/AboutSection/AboutSection.css
@@ -18,8 +18,6 @@
     padding: 20px;
     border-radius: .5rem;
 }
-.specialtySection {
-    background-color: rgba(30, 27, 187, 0.493);
-    padding: 10px;
-    border-radius: .5rem;
+.hr2 {
+    border-bottom: 2px solid #2978fff6
 }
