--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -5,3 +5,10 @@
     margin-top: 100px;
     border-radius: .5rem;
 }
+.loginForm2 {
+    width: 500px;
+    background-color: rgba(252, 212, 79, 0.849);
+    padding: 20px;
+    margin-top: 100px;
+    border-radius: .5rem;
+}
