--- a/client/src/components/ProfileImage/ProfileImage.css
+++ b/client/src/components/ProfileImage/ProfileImage.css
@@ -1,8 +1,5 @@
 .card {
     position: relative;
-    width: 200px;
-    min-width: 200px;
-    max-height: 300px;
     box-shadow: 0 3px 6px rgb(46, 46, 46), 0 3px 6px rgb(68, 67, 67);
     text-align: left;
 }
@@ -10,17 +7,23 @@
 .card > .img-container {
     overflow: hidden;
     text-align: center;
+    border-radius: .5rem;
+    padding: 1px;
 }
 
 .img-container > .remove {
+    border-radius: .5rem;
     position: absolute;
-    bottom: 0px;
-    left: 5px;
+    top: 0px;
+    left: 7px;
     cursor: pointer;
 }
 
 .deleteBtn:hover {
     background-color: #d50000;
+}
+.remove {
+    transform: rotate(35deg);
 }
 
 .deleteBtn {
@@ -28,4 +31,8 @@
     border-radius: .5rem;
     background-color: rgba(8, 8, 8, 0.692);
     color: white;
+}
+
+.profile-pic {
+    max-height: 400px;
 }
