--- a/client/src/components/GraphersCard/GraphersCard.css
+++ b/client/src/components/GraphersCard/GraphersCard.css
@@ -4,7 +4,9 @@
     border-radius: .5rem;
     box-shadow: 0 3px 6px rgb(46, 46, 46), 0 3px 6px rgb(68, 67, 67);
     font-family: 'Cardo', serif;
+    color: white;
 }
 .profilePic {
     max-height: 300px;
+    box-shadow: 0 3px 6px rgb(46, 46, 46), 0 3px 6px rgb(68, 67, 67);
 }
